tests/snapshots/reads__big_evm_usdc_transfers.snap
---
source: tests/reads.rs
expression: snapshot.trim_end()
---
## json
response 22562400..22563991 n=1588 read_through=-
read blocks blocks=-..- cols=[hash,number,timestamp] block_column=number at=1588:a2c3646c67c6cc2b -> rows=1588
read blocks blocks=0..- cols=[number] block_column=number required=[hash,number,timestamp] positions -> rows=1592
read logs blocks=-..- cols=[address,block_number,data,data_size,log_index,topic0,topic1,topic2,topic3,transaction_index] block_column=block_number at=44703:27b5fcd3f5e07a1d -> rows=44703
read logs blocks=0..22563423 cols=[block_number,data_size] block_column=block_number required=[address,data,data_size,log_index,topic0,topic1,topic2,topic3,transaction_index] items=[address in(Utf8: "0xa0b86991c6218b36c1d19d4a2e9eb0ce3606eb48") topic0 in(Utf8: "0xddf252ad1be2c89b69c2b068fc378daa952ba7f163c4a11628f55a4df523b3ef")] positions window=0..22563423 -> rows=29273
read logs blocks=22563424..- cols=[block_number,data_size] block_column=block_number required=[address,data,data_size,log_index,topic0,topic1,topic2,topic3,transaction_index] items=[address in(Utf8: "0xa0b86991c6218b36c1d19d4a2e9eb0ce3606eb48") topic0 in(Utf8: "0xddf252ad1be2c89b69c2b068fc378daa952ba7f163c4a11628f55a4df523b3ef")] positions window=22563424..- -> rows=15430

## json, page 256 KiB
response 22562400..22562424 n=25 read_through=22563423
read blocks blocks=-..- cols=[hash,number,timestamp] block_column=number at=25:b22d764ce03641e4 -> rows=25
read blocks blocks=0..- cols=[number] block_column=number required=[hash,number,timestamp] positions -> rows=1592
read logs blocks=-..- cols=[address,block_number,data,data_size,log_index,topic0,topic1,topic2,topic3,transaction_index] block_column=block_number at=776:2655c20335e350cc -> rows=776
read logs blocks=0..22563423 cols=[block_number,data_size] block_column=block_number required=[address,data,data_size,log_index,topic0,topic1,topic2,topic3,transaction_index] items=[address in(Utf8: "0xa0b86991c6218b36c1d19d4a2e9eb0ce3606eb48") topic0 in(Utf8: "0xddf252ad1be2c89b69c2b068fc378daa952ba7f163c4a11628f55a4df523b3ef")] positions window=0..22563423 -> rows=29273

## arrow
response 22562400..22563991 n=1588
read blocks blocks=-..- cols=[hash,number,timestamp] block_column=number at=1588:a2c3646c67c6cc2b -> rows=1588
read blocks blocks=0..- cols=[number] block_column=number required=[hash,number,timestamp] positions -> rows=1592
read logs blocks=-..- cols=[address,block_number,data,data_size,log_index,topic0,topic1,topic2,topic3,transaction_index] block_column=block_number at=44703:27b5fcd3f5e07a1d -> rows=44703
read logs blocks=0..22563423 cols=[block_number,data_size] block_column=block_number required=[address,data,data_size,log_index,topic0,topic1,topic2,topic3,transaction_index] items=[address in(Utf8: "0xa0b86991c6218b36c1d19d4a2e9eb0ce3606eb48") topic0 in(Utf8: "0xddf252ad1be2c89b69c2b068fc378daa952ba7f163c4a11628f55a4df523b3ef")] positions window=0..22563423 -> rows=29273
read logs blocks=22563424..- cols=[block_number,data_size] block_column=block_number required=[address,data,data_size,log_index,topic0,topic1,topic2,topic3,transaction_index] items=[address in(Utf8: "0xa0b86991c6218b36c1d19d4a2e9eb0ce3606eb48") topic0 in(Utf8: "0xddf252ad1be2c89b69c2b068fc378daa952ba7f163c4a11628f55a4df523b3ef")] positions window=22563424..- -> rows=15430
