tests/snapshots/reads__rpc_getBlockReceipts.snap
---
source: tests/reads.rs
expression: snapshot.trim_end()
---
## json
response 24550620..24550620 n=1 read_through=-
read blocks blocks=-..- cols=[hash,number] block_column=number at=1:e41438cbe011bd56 -> rows=1
read blocks blocks=24550620..24550620 cols=[number] block_column=number required=[hash,number] positions -> rows=1
read logs blocks=-..- cols=[address,block_number,data,data_size,log_index,topic0,topic1,topic2,topic3,transaction_hash,transaction_index] block_column=block_number at=695:76f2cd65d93c9be3 -> rows=695
read logs blocks=24550620..24550620 cols=[block_number,data_size,transaction_index] block_column=block_number required=[address,data,data_size,log_index,topic0,topic1,topic2,topic3,transaction_hash,transaction_index] keys=[block_number,transaction_index] block=block_number as pairs positions window=24550620..24550620 -> rows=695
read transactions blocks=-..- cols=[block_number,contract_address,cumulative_gas_used,effective_gas_price,from,gas_used,hash,status,to,transaction_index,type] block_column=block_number at=307:172e34e75d23b78d -> rows=307
read transactions blocks=24550620..24550620 cols=[block_number,transaction_index] block_column=block_number required=[contract_address,cumulative_gas_used,effective_gas_price,from,gas_used,hash,status,to,transaction_index,type] items=[] positions window=24550620..24550620 -> rows=307

## json, page 256 KiB
response 24550620..24550620 n=1 read_through=-
read blocks blocks=-..- cols=[hash,number] block_column=number at=1:e41438cbe011bd56 -> rows=1
read blocks blocks=24550620..24550620 cols=[number] block_column=number required=[hash,number] positions -> rows=1
read logs blocks=-..- cols=[address,block_number,data,data_size,log_index,topic0,topic1,topic2,topic3,transaction_hash,transaction_index] block_column=block_number at=695:76f2cd65d93c9be3 -> rows=695
read logs blocks=24550620..24550620 cols=[block_number,data_size,transaction_index] block_column=block_number required=[address,data,data_size,log_index,topic0,topic1,topic2,topic3,transaction_hash,transaction_index] keys=[block_number,transaction_index] block=block_number as pairs positions window=24550620..24550620 -> rows=695
read transactions blocks=-..- cols=[block_number,contract_address,cumulative_gas_used,effective_gas_price,from,gas_used,hash,status,to,transaction_index,type] block_column=block_number at=307:172e34e75d23b78d -> rows=307
read transactions blocks=24550620..24550620 cols=[block_number,transaction_index] block_column=block_number required=[contract_address,cumulative_gas_used,effective_gas_price,from,gas_used,hash,status,to,transaction_index,type] items=[] positions window=24550620..24550620 -> rows=307

## arrow
response 24550620..24550620 n=1
read blocks blocks=-..- cols=[hash,number] block_column=number at=1:e41438cbe011bd56 -> rows=1
read blocks blocks=24550620..24550620 cols=[number] block_column=number required=[hash,number] positions -> rows=1
read logs blocks=-..- cols=[address,block_number,data,data_size,log_index,topic0,topic1,topic2,topic3,transaction_hash,transaction_index] block_column=block_number at=695:76f2cd65d93c9be3 -> rows=695
read logs blocks=24550620..24550620 cols=[block_number,data_size,transaction_index] block_column=block_number required=[address,data,data_size,log_index,topic0,topic1,topic2,topic3,transaction_hash,transaction_index] keys=[block_number,transaction_index] block=block_number as pairs positions window=24550620..24550620 -> rows=695
read transactions blocks=-..- cols=[block_number,contract_address,cumulative_gas_used,effective_gas_price,from,gas_used,hash,status,to,transaction_index,type] block_column=block_number at=307:172e34e75d23b78d -> rows=307
read transactions blocks=24550620..24550620 cols=[block_number,transaction_index] block_column=block_number required=[contract_address,cumulative_gas_used,effective_gas_price,from,gas_used,hash,status,to,transaction_index,type] items=[] positions window=24550620..24550620 -> rows=307
